<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bwcheung-Travelclaim</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_claim">New Claim</string>
    <string name="Destination">Destination</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="cost">Cost:</string>
    <string name="description">Description</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="totalcost">Total Costs</string>
    <string name="equal">=</string>
    <string name="category">Category:</string>

    <string-array name="category_array">
        <item>air fare</item>
        <item>ground transport</item>
        <item>vehicle rental</item>
        <item>fuel</item>
        <item>parking</item>
        <item>registration</item>
        <item>accommodation</item>
        <item>meal</item>
    </string-array>

    <string name="date">Date:</string>

    <string-array name="currency_array">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>

    <string name="editexpense">Edit Expenses</string>
    <string name="title_activity_claim_summary">Claim Summary</string>
    <string name="title_activity_new_expense">New Expense</string>
    
    <string-array name="menu_array">
        <item>Edit</item>
        <item>Delete</item>
        <item>Email</item>
        <item>Change Status</item>
    </string-array>
    <string name="CAD">CAD</string>
    <string name="EUR">EUR</string>
    <string name="USD">USD</string>
    <string name="GBP">GBP</string>
    <string name="expense">Expense</string>
    <string-array name="expenseMenuArray">
        <item >Delete</item>
        <item >Edit</item>
    </string-array>
    

</resources>
