<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/claimsummary"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/totalcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expenselist"
        android:layout_centerHorizontal="true"
        android:text="@string/totalcost"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/expenselist"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/border" >
    </ListView>

    <TextView
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalcost"
        android:layout_alignParentTop="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/description"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/USD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CAD"
        android:layout_below="@+id/CAD"
        android:text="@string/USD"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/EUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/USD"
        android:layout_below="@+id/USD"
        android:text="@string/EUR"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalcost"
        android:layout_below="@+id/GBP"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/GBP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EUR"
        android:layout_below="@+id/EUR"
        android:text="@string/GBP"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/USDcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/USD"
        android:layout_alignBottom="@+id/USD"
        android:layout_alignRight="@+id/CADcost"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/EURcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EUR"
        android:layout_alignBottom="@+id/EUR"
        android:layout_alignLeft="@+id/USDcost"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/GBPcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignLeft="@+id/EURcost"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalcost"
        android:layout_below="@+id/totalcost"
        android:layout_marginLeft="37dp"
        android:text="@string/equal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/CADcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalcost"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/expenseDate"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/CAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/expenseDate"
        android:layout_alignBottom="@+id/expenseDate"
        android:layout_alignRight="@+id/expenseDate"
        android:layout_marginRight="32dp"
        android:text="@string/CAD"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expenseDate"
        android:layout_toLeftOf="@+id/CADcost"
        android:text="@string/equal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/GBP"
        android:layout_toLeftOf="@+id/CADcost"
        android:text="@string/equal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignLeft="@+id/TextView02"
        android:text="@string/equal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>