<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hello"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="addClaim"
        android:text="Add" />

    <EditText
        android:id="@+id/editStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateText"
        android:layout_alignBottom="@+id/dateText"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/dateText"
        android:ems="10"
        android:focusable="false"
        android:onClick="showDatePickerDialog" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EndDate"
        android:layout_alignBottom="@+id/EndDate"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/EndDate"
        android:ems="10"
        android:focusable="false"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:id="@+id/EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editStartDate"
        android:layout_marginTop="46dp"
        android:text="@string/endDate"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEndDate"
        android:ems="10"
        android:hint="Add  a Description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="109dp"
        android:text="@string/startDate"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/Destination"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Destination"
        android:layout_alignBottom="@+id/Destination"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/dateText"
        android:ems="10" />

</RelativeLayout>